--- a/filterAbleCard/src/input.css
+++ b/filterAbleCard/src/input.css
@@ -16,7 +16,7 @@
 
 @layer components {
     .card {
-        @apply w-[250px] m-3 rounded-2xl bg-slate-300 relative overflow-hidden;
+        @apply basis-[250px] flex flex-col flex-1 m-3 rounded-2xl bg-slate-300  overflow-hidden;
     }
     .card__info{
         @apply px-3 py-2;
